Tue May 27 21:53:49 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_execute_interrupts): delay interrupts during
	  raising exceptions.  [ruby-dev:34855]

Tue May 27 20:18:30 2008  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_slice_bang): Return an empty array instead of
	  nil when pos is valid and len is adjusted from a valid value to
	  zero; caught by RubySpec.

Tue May 27 19:12:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (MKPREP), common.mk, win32/Makefile.sub (prelude.c): get
	  rid of depending PREP with nmake.

	* common.mk (encs): depends on libruby.

Tue May 27 19:00:22 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/stringio/stringio.c (strio_each_char, Init_stringio): Add
	  StringIO#{each_char,chars}.
	  (Init_stringio): Fix StringIO#bytes.

Tue May 27 17:54:35 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/stringio/stringio.c (strio_each_byte): Return self instead
	  of nil as the rdoc says.

Tue May 27 15:36:27 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (check_int): use PRIxVALUE format specifier.

	* numeric.c (check_uint, rb_num2fix, int_chr): ditto.

	* numeric.c (num_fdiv): fallback to_f should always return float
	  result.  should not use #quo that may return rational.

	* numeric.c (num_div): should raise ZeroDivisionError.

	* numeric.c (fix_divide): ditto.

	* test/ruby/test_numeric.rb (TestNumeric::test_divmod): avoid
	  ZeroDivisionError in tests.

Tue May 27 13:14:53 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enum.c (enum_to_a): Pass arguments through to #each().
	  (enum_sort): Follow the enum_to_a signature change.
	  (enum_reverse_each): Add #reverse_each().

Tue May 27 13:12:37 2008  Akinori MUSHA  <knu@iDaemons.org>

	* io.c (Init_IO): Define ARGF.{lines,bytes,chars}.

Tue May 27 12:06:37 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (BUFCHECK): wrong condition. [ruby-core:16921]

	* file.c (file_expand_buf): shouldn't use buflen for length of string.
